# zero-sugar

./: .gitignore  Cargo.toml  README.md  build.sh  example.js  insta.yaml
src/: ast.rs  get_stmt_span.rs  lib.rs  mapper.rs  mapper_state.rs  utils.rs  walker.rs
src/transforms/: builder.rs  for_header.rs  mod.rs  stmt_continue.rs  stmt_do_while.rs  stmt_finally.rs  stmt_for.rs  stmt_for_in.rs  stmt_for_n.rs  stmt_for_of.rs  stmt_switch.rs  stmt_var_decl.rs
src/web/: index.html  zero_sugar.js  zero_sugar_bg.wasm
tests/: continue_test.rs  finally_test.rs  for_in_test.rs  for_n_test.rs  for_of_test.rs  for_test.rs  mapper_test.rs  mapper_while_test.rs  switch_test.rs  var_decl_test.rs  walker_test.rs  while_test.rs
