[package]
name = "js-transformer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
oxc_allocator = "0.4"
oxc_parser = "0.4"
oxc_ast = "0.4"
oxc_span = "0.4"
oxc_syntax = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
oxc_codegen = "0.4.0"
