[package]
name = "zero-sugar"
version = "0.1.0"
edition = "2021"

[lib]
name = "zero_sugar"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
oxc_allocator = "0.4"
oxc_parser = "0.4"
oxc_ast = "0.4"
oxc_span = "0.4"
oxc_syntax = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
oxc_codegen = "0.4.0"

[dev-dependencies]
insta = "1.36.1"
